--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Social network for devs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node server.js",
+    "server" : "nodemon server.js"
   },
   "author": "Anthony Buncio",
   "license": "MIT",
@@ -17,5 +18,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
